add portfolio page to website

--- a/index.html
+++ b/index.html
@@ -1,13 +1,46 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>CHANGE ME</title>
+    <title>Marvin's Website</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
     <!-- All content goes here -->
     <div id="all-contents">
-      
+      <nav>
+        <h1>Marvin's Website</h1>
+        <ul id="nav-ul">
+          <li class="nav-li">
+            <a href="index.html">Home</a>
+          </li>
+          <li class="nav-li">
+            <a href="portfolio.html">Portfolio</a>
+          </li>
+        </ul>
+      </nav>
+      <main>
+        <!-- Sidebar section -->
+        <div class="sidebar">
+          <img class="sidebar-img" src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2c/Default_pfp.svg/2048px-Default_pfp.svg.png">
+        </div>
+
+        <!-- Content section -->
+        <div class="content">
+          <h2>Marvin</h2>
+          <p>Mascot at Operation Spark</p>
+
+          <!-- Interests section -->
+          <div id="interests">
+            <h3>Interests</h3>
+            <ul>
+              <li>Cooking</li>
+              <li>Running</li>
+              <li>Writing</li>
+            </ul>
+          </div>
+        </div>
+      </main>
     </div>
   </body>
 </html>
