--- a/fsd-projects/bouncing-box/index.html
+++ b/fsd-projects/bouncing-box/index.html
@@ -67,7 +67,9 @@
 
 			// TODO 2 - Variable declarations 
 
-
+			var positionX = 0;
+            var points = 0;
+            var speed = 10;
 
 			/* 
 			This Function will be called 20 times/second. Each time it is called,
@@ -75,18 +77,29 @@
 			turn it around! 
 			*/
 			function update() {
+				if(positionX > boardWidth){
+					speed *= -1;
+				}
 
+				if(positionX < 0){
+					speed *= -1;
+				}
 
+				positionX += speed;
+				moveBoxTo(positionX);
 			};
 
-			/* 
+			/*  
 			This Function will be called each time the box is clicked. Each time it is called,
 			it should increase the points total, increase the speed, and move the box to
 			the left side of the screen.
 			*/
 			function handleBoxClick() {
-
-
+positionX = 0;
+points++;
+changeBoxText(points);
+speed += 3;
+speed = 3 * points + 10;
 			};
 
 
